started desktop nav

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,4 +1,5 @@
 @use '../base/variables' as *;
+@use '../base/mixins' as *;
 
 header {
     background-color: $midgroundCol;
@@ -9,10 +10,17 @@ header {
     flex-wrap:wrap;
     justify-content: space-between;
     align-items: center;
+        @include mq(768){
+            flex-wrap: nowrap;
+        }
 
     h1 {
         color: $brandCol;
         padding: 0;
         margin: 0;
+            @include mq(768){
+                display:block;
+                min-width:34rem;
+            }
     }
 }
