--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -2,4 +2,9 @@
 
 footer {
     font-size: 0.8rem;
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    margin: 0 auto;
 }
