second nav added

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,4 +11,5 @@
 @use './partials/header';
 @use './partials/footer';
 @use './partials/mobileNav';
-@use './partials/desktopNav'; 
+@use './partials/desktopNav';
+@use './partials/_moviesCategory'; 
