--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -2,6 +2,11 @@
 @use '../base/variables' as *;
 
 .single-movie-content{
+    margin:1rem;
+    @include mq($desktop){
+        display:flex;
+        margin:4rem;
+    }
     .single-movie-poster{
         margin-top:1rem;
         img{
@@ -10,6 +15,29 @@
             margin-left:auto;
             margin-right:auto;
             border-radius: 1rem;
+            @include mq($desktop){
+                width:75%;
+                
+            }
+        }
+
+        @include mq ($desktop){
+            display:flex;
+            align-items: center;
+        }
+    }
+    .single-movie-info{
+        @include mq ($desktop){
+            margin-left:1rem;
+            width:75%;
+        }
+        p{
+            margin-top:0.5rem;
+            margin-bottom:0.5rem;
+        }
+       
+        iframe{
+            margin-top:1rem;
         }
     }
         
