Add Mobile Category Nav + format poster data

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,5 +12,6 @@
 @use './partials/footer';
 @use './partials/mobileNav';
 @use './partials/desktopNav';
-@use './partials/_moviesCategory';
+@use './partials/moviesGrid';
+@use './partials/categoryNav';
 @use './partials/singleMoviePage';  
