--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -39,6 +39,10 @@
         iframe{
             margin-top:1rem;
         }
+        .no-trailer{
+            margin-top:1rem;
+            width:420px;
+        }
     }
         
 }
