Change cursor for more intuitive interaction

--- a/src/scss/partials/_categoryNav.scss
+++ b/src/scss/partials/_categoryNav.scss
@@ -25,6 +25,7 @@
     width: 10rem;
     height: fit-content;
     overflow: hidden;
+    cursor: pointer;
     
     ul {
         list-style: none;
