Add API call for Banner

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,7 @@
 @use './partials/footer';
 @use './partials/mobileNav';
 @use './partials/desktopNav';
+@use './partials/banner';
 @use './partials/moviesGrid';
 @use './partials/categoryNav';
 @use './partials/singleMoviePage';  
