--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -10,7 +10,7 @@ header {
     flex-wrap:wrap;
     justify-content: space-between;
     align-items: center;
-        @include mq(768){
+        @include mq($tablet){
             flex-wrap: nowrap;
         }
 
@@ -18,7 +18,7 @@ header {
         color: $brandCol;
         padding: 0;
         margin: 0;
-            @include mq(768){
+            @include mq($tablet){
                 display:block;
                 min-width:34rem;
             }
