--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,12 +1,12 @@
 // VARIABLES
-$mainFont: 'Poppins', Helvetica, Arial, sans-serif;
+$mainFont: 'Jost', Helvetica, Arial, sans-serif;
 $brandCol: #FFCC00;
 $bodyCol: #FFFFFF;
 $midgroundCol: #232323;
 $backgroundCol: #0F0F0F;
 
 // GOOGLE FONT IMPORTS
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
 
 //MEDIA QUERY VARIABLES 
 $tablet: 768;
