"add to watchlist" functionality done

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,3 +17,4 @@
 @use './partials/categoryNav';
 @use './partials/singleMoviePage';  
 @use './partials/search';
+@use './partials/addWatchlistBtn';
