--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -31,6 +31,20 @@
             margin-left:1rem;
             width:75%;
         }
+    
+        .first-row{
+            button{
+                padding:0; 
+                padding-left: 0.75rem;
+            }
+            @include mq ($laptop){
+                display:flex;
+                flex-direction: row-reverse;
+                justify-content: start;
+                align-items: center;
+                margin:0;
+            }
+        }
         p{
             margin-top:0.5rem;
             margin-bottom:0.5rem;
