Add logo + Edit placeholder poster img

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,7 +6,7 @@ $midgroundCol: #232323;
 $backgroundCol: #0F0F0F;
 
 // GOOGLE FONT IMPORTS
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap');
 
 //MEDIA QUERY VARIABLES 
 $tablet: 768;
