--- a/src/scss/partials/_body.scss
+++ b/src/scss/partials/_body.scss
@@ -21,6 +21,7 @@ body {
     background-color: $backgroundCol;
     font-family: $mainFont;
     color: $bodyCol;
+    font-size: 1.1rem;
 }
 
 main {
