--- a/src/scss/partials/_categoryNav.scss
+++ b/src/scss/partials/_categoryNav.scss
@@ -50,7 +50,8 @@
             display: block;
             width: 100%;
             padding: 0.5rem;
-
+            font-weight: 500;
+            
             &:hover {
                 color: $midgroundCol;
             }
