Edit About content + styling

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,7 +2,7 @@
 $mainFont: 'Jost', Helvetica, Arial, sans-serif;
 $brandCol: #FFCC00;
 $bodyCol: #FFFFFF;
-$midgroundCol: #232323;
+$midgroundCol: #1e1e1e;
 $backgroundCol: #0F0F0F;
 
 // GOOGLE FONT IMPORTS
