--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -5,9 +5,23 @@
   max-width: 50rem;
   margin: 10rem auto;
 
+  > h1 {
+    font-size: 2rem;
+    line-height: 2rem;
+    margin: 1rem 0;
+  }
+
   img {
     width: 6.25rem;
     margin: 1rem 0;
   }
 
+}
+
+@media (min-width: 48rem){
+  .about-section {
+    h1 {
+      font-size: 3rem;
+    }
+  }
 }
