Edit link hover effects

--- a/src/scss/partials/_body.scss
+++ b/src/scss/partials/_body.scss
@@ -4,10 +4,6 @@
 a, a:visited {
     color: $bodyCol;
     text-decoration: none;
-
-    &:hover, &:active, &:focus {
-        color: $brandCol;
-    } 
 }
 
 .button-link {
@@ -15,6 +11,12 @@ a, a:visited {
     border-radius: 2rem;
     padding: 0.5rem 1rem;
     width: fit-content;
+
+    &:hover, &:active, &:focus {
+        background-color: $brandCol;
+        border: 1px solid $brandCol;
+        color: $midgroundCol;
+    }
 }
 
 
