--- a/src/scss/partials/_banner.scss
+++ b/src/scss/partials/_banner.scss
@@ -22,6 +22,8 @@
 
     h1 {
       margin: 0.5rem 0;
+      font-size: 2rem;
+      line-height: 2rem;
     }
 
     p {
@@ -49,6 +51,11 @@
 
     div {
       padding: 5rem 2rem;
+
+      h1 {
+        font-size: 3rem;
+        line-height: 2.5rem;
+      }
 
       .overview {
         max-width: 70%;
