Add logo to header

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -5,7 +5,7 @@ header {
     background-color: $midgroundCol;
     font-family: $mainFont;
     border-radius: 0 0 1rem 1rem;
-    padding: 0 1rem;
+    padding: 1rem;
     display:flex;
     flex-wrap:wrap;
     justify-content: space-between;
@@ -14,13 +14,17 @@ header {
             flex-wrap: nowrap;
         }
 
-    h1 {
-        color: $brandCol;
-        padding: 0;
-        margin: 0;
-            @include mq($tablet){
-                display:block;
-                min-width:34rem;
-            }
+    > a {
+        line-height: 0.5rem;
+    }
+    
+    img {
+        width: 6.25rem;
+    }
+}
+
+@media (min-width: 40rem) {
+    header img {
+        width: 12.5rem;
     }
 }
