Edit header, navs, search styling

--- a/src/scss/partials/_banner.scss
+++ b/src/scss/partials/_banner.scss
@@ -3,9 +3,9 @@
 
 .banner-section {
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   border-radius: 1rem;
-  max-width: 64rem;
+  max-width: 86rem; // 1440px - 2rem margins
   height: fit-content;
   margin: 0.5rem;
   
@@ -24,6 +24,7 @@
       margin: 0.5rem 0;
       font-size: 2rem;
       line-height: 2rem;
+      font-weight: 500;
     }
 
     p {
@@ -47,7 +48,6 @@
 
 @media (min-width: 48rem){
   .banner-section {
-    margin: 1rem auto 0;
 
     div {
       padding: 5rem 2rem;
@@ -64,4 +64,10 @@
     }
   }
  
+}
+
+@media (min-width: 64rem){
+  .banner-section {
+    margin: 2rem 2rem 0;
+  }
 }
