--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -10,6 +10,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
+    max-width: 90rem;
+    margin: 0 auto;
 
     @include mq($tablet){
         flex-wrap: nowrap;
