--- a/src/scss/partials/_moviesGrid.scss
+++ b/src/scss/partials/_moviesGrid.scss
@@ -1,4 +1,6 @@
 @use '../base/variables' as *;
+@use '../base/mixins' as *;
+
 
 // MOVIE POSTERS
 .movies-container {
@@ -9,6 +11,17 @@
   gap: 0.5rem;
   padding: 0.5rem;
   margin: 0 auto;
+  justify-content: center;
+
+  @include mq($tablet){
+    grid-template-columns: repeat(auto-fit, minmax(145px, 216px));
+    padding: 0 1rem;
+    gap: 1rem;
+  }
+
+  @include mq($laptop){
+    max-width: 88rem;
+  }
 }
 
 .movie-card {
@@ -58,7 +71,8 @@
   z-index: -1;
   transition: all 0.2s ease-in;
   
-  h2 {
+  h1 {
+    font-size: 1.1rem;
     line-height: 1.1rem;
     margin: 0 0 0.5rem 0;
   }
@@ -84,6 +98,12 @@
       background-color: $brandCol;
       color: $midgroundCol;
     }
+  }
+
+  .add-watchlist-btn {
+    position: relative;
+    top: 0;
+    right: 0;
   }
 
 }
