--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -1,4 +1,5 @@
 @use '../base/variables' as *;
+@use '../base/mixins' as *;
 
 .about-section {
   width: 100%;
@@ -6,22 +7,16 @@
   margin: 10rem auto;
 
   > h1 {
-    font-size: 2rem;
     line-height: 2rem;
     margin: 1rem 0;
+
+    @include mq($tablet){
+      font-size: 3rem;
+    }
   }
 
   img {
     width: 6.25rem;
     margin: 1rem 0;
-  }
-
-}
-
-@media (min-width: 48rem){
-  .about-section {
-    h1 {
-      font-size: 3rem;
-    }
-  }
+  } 
 }
