--- a/src/scss/partials/_body.scss
+++ b/src/scss/partials/_body.scss
@@ -1,7 +1,12 @@
 @use '../base/variables' as *;
 
 // TYPOGRAPHY
-a, a:visited {
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+    font-size: 2rem;
+}
+
+    a, a:visited {
     color: $bodyCol;
     text-decoration: none;
 }
@@ -29,7 +34,6 @@ body {
 }
 
 main {
-    padding: 0 1rem;
     position: relative;
 }
 
