--- a/src/scss/partials/_search.scss
+++ b/src/scss/partials/_search.scss
@@ -51,6 +51,11 @@ form {
     }
 }
 
+.search-results {
+    max-width: 88rem;
+    margin: 0 auto;
+}
+
 .search-results h1, .no-result{
     margin: 2rem 0.5rem;
 
@@ -59,6 +64,8 @@ form {
     }
 
     @include mq($laptop){
-        margin: 2rem 2rem;
+        max-width: 90rem;
+        padding: 2rem;
+        margin: auto;
     }
 }
