--- a/src/scss/partials/_search.scss
+++ b/src/scss/partials/_search.scss
@@ -52,11 +52,11 @@ form {
 }
 
 .search-results {
-    max-width: 88rem;
+    max-width: 90rem;
     margin: 0 auto;
 }
 
-.search-results h1, .no-result{
+.search-results > h1, .no-result{
     margin: 2rem 0.5rem;
 
     @include mq($tablet){
