--- a/src/scss/partials/_body.scss
+++ b/src/scss/partials/_body.scss
@@ -31,9 +31,19 @@ body {
     font-family: $mainFont;
     color: $bodyCol;
     font-size: 1.1rem;
-}
+    
+    .wrapper {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 
-main {
-    position: relative;
+    main {
+        flex-grow: 1;
+        width: 100%;
+        max-width: 90rem;
+        margin: 0 auto;
+    }
 }
 
