--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -3,9 +3,9 @@
 footer {
     width: 100%;
     font-size: 0.9rem;
-    padding: 0 0.5rem;
-    margin: 2rem auto;
+    margin: 5rem auto 1rem;
     text-align: center;
+    justify-self: flex-end;
 
     img {
         width: 6.25rem;
