--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -10,6 +10,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
+    width: 100%;
     max-width: 90rem;
     margin: 0 auto;
 
