--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -15,8 +15,7 @@
         img {
             width: 45%;
             display: block;
-            margin-left: auto;
-            margin-right: auto;
+            margin: 0 auto;
             border-radius: 1rem;
 
             @include mq($laptop) {
@@ -43,7 +42,6 @@
                 justify-content: space-between;
                 align-items: center;
                 margin-top:1rem;
-                margin-left:0;
 
             button {
                 padding: 0;
@@ -68,8 +66,7 @@
             width: 320px;
             height: 180px;
             display:block;
-            margin-left: auto;
-            margin-right:auto;
+            margin: 0 auto;
 
             @include mq ($tablet) {
                 width: 420px;
