--- a/src/scss/partials/_banner.scss
+++ b/src/scss/partials/_banner.scss
@@ -7,6 +7,21 @@
   border-radius: 1rem;
   height: fit-content;
   margin: 1rem 0.5rem 0;
+
+  .add-watchlist-btn {
+       
+    svg {
+      
+      height: 2rem;
+      width: 2rem;
+
+      @include mq($laptop){
+        height: 2.5rem;
+        width: 2.5rem;
+      }
+        
+    }
+  }
   
   @include mq($tablet){
    margin: 1rem; 
