--- a/src/scss/partials/_moviesGrid.scss
+++ b/src/scss/partials/_moviesGrid.scss
@@ -62,6 +62,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+   
   width: 100%;
   height: 100%;
   font-size: 0.8rem;
@@ -75,17 +76,56 @@
     font-size: 1.1rem;
     line-height: 1.1rem;
     margin: 0 0 0.5rem 0;
+    padding-top: 3.8rem;
+
+    @include mq($laptop){
+      font-size: 1.5rem;
+    }
+    
   }
+  
 
   p {
     margin: 0;
-    line-height: 1rem;
+  }
+
+  .top-info {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    left: 0.5rem;
+    
+   
+    .rating {
+      font-size: 1.3rem;
+
+      @include mq($laptop){
+        font-size: 1.5rem;
+      }
+    }
+
   }
 
   .date {
     font-weight: 500;
+    position: absolute;
+    top: 2.8rem;
+
+    @include mq($laptop){
+      font-size: 0.9rem;
+    }
+
   }
 
+  .overview{
+    @include mq($tablet){
+      font-size: 1rem;
+    }
+  }
+
+  
   .button-link {
     font-weight: 500;
     width: fit-content;
@@ -98,12 +138,6 @@
       background-color: $brandCol;
       color: $midgroundCol;
     }
-  }
-
-  .add-watchlist-btn {
-    position: relative;
-    top: 0;
-    right: 0;
   }
 
 }
