--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -1,9 +1,14 @@
 @use '../base/mixins' as *;
 @use '../base/variables' as *;
 
+.single-movie{
+    display: flex;
+    justify-content: center;
+}
+
 .single-movie-content {
     margin: 1rem;
-
+    max-width: 90rem;
     @include mq($laptop) {
         display: flex;
         margin: 4rem;
@@ -31,6 +36,7 @@
     }
 
     .single-movie-info {
+        margin:1rem;
         @include mq ($laptop) {
             margin-left: 1rem;
             width: 75%;
@@ -53,12 +59,13 @@
             }
         }
 
-        p {
+        .first-row + h2{
             margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
         }
 
-
+        p + iframe{
+            margin-top:1rem;
+        }
 
         iframe {
             margin-top: 1rem;
@@ -71,8 +78,12 @@
             @include mq ($tablet) {
                 width: 420px;
                 height: 236.25px;
+            }
+
+            @include mq ($laptop){
                 display: inline;
             }
+
 
 
         }
