--- a/src/scss/partials/_categoryNav.scss
+++ b/src/scss/partials/_categoryNav.scss
@@ -82,6 +82,7 @@
         border: none;
         width: 100%;
         max-width: 64rem;
+        
         > p {
             display: none;
         }
@@ -90,7 +91,7 @@
             display: flex;
             white-space: nowrap;
 
-            li.selected a.active {
+            li.selected a {
                 background-color: transparent;
                 color: $midgroundCol;
             }
@@ -103,7 +104,6 @@
         padding: 0;
     }
 }
-
 
 // FOR SELECTED CATEGORY - SLIDING ANIMATION
 // revised from https://techmidpoint.com/elastic-tab-animation-navigation-menus/
