adjust margin again

--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -70,7 +70,8 @@
         iframe {
             margin-top: 1rem;
             border: none;
-            width: 320px;
+            min-width: 304px;
+            margin:0 0.5rem;
             height: 180px;
             display:block;
             margin: 0 auto;
