--- a/src/scss/partials/_singleMoviePage.scss
+++ b/src/scss/partials/_singleMoviePage.scss
@@ -1,7 +1,7 @@
 @use '../base/mixins' as *;
 @use '../base/variables' as *;
 
-.single-movie{
+.single-movie {
     display: flex;
     justify-content: center;
 }
@@ -9,24 +9,20 @@
 .single-movie-content {
     margin: 1rem;
     max-width: 90rem;
+    overflow: hidden;
+
     @include mq($laptop) {
         display: flex;
-        margin: 4rem;
+        margin: 4rem auto;
     }
 
     .single-movie-poster {
-        margin-top: 1rem;
-
         img {
-            width: 45%;
+            width: 80%;
+            max-width: 20rem;
             display: block;
-            margin: 0 auto;
+            margin: 1rem  auto;
             border-radius: 1rem;
-
-            @include mq($laptop) {
-                width: 75%;
-
-            }
         }
 
         @include mq ($laptop) {
@@ -36,43 +32,44 @@
     }
 
     .single-movie-info {
-        margin: 0 2rem;
+        max-width: 48rem;
+
         @include mq ($laptop) {
-            margin-left: 1rem;
             width: 75%;
+            margin: 0 2rem;
         }
 
         .first-row {
-                display: flex;
-                flex-direction: row-reverse;
-                justify-content: space-between;
-                align-items: center;
-                margin-top:1rem;
+            font-size: 1.3rem;
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            align-items: center;
 
             button {
-                padding: 0;
-                padding-left: 0.75rem;
+                padding: 0 0 0 0.75rem;
+
+                svg {
+                    width: 2.5rem;
+                    height: 2.5rem;
+                }
             }
 
-            @include mq ($laptop) {
+            @include mq ($tablet) {
                 justify-content: start;
             }
         }
 
         .first-row + h2{
-            margin-top: 0.5rem;
+            margin: 0;
         }
 
-        p + iframe{
-            margin-top:1rem;
+        p + iframe {
+            margin-top: 2rem;
         }
 
         iframe {
-            margin-top: 1rem;
             border: none;
-            min-width: 304px;
-            margin:0 0.5rem;
-            height: 180px;
             display:block;
             margin: 0 auto;
 
@@ -84,11 +81,7 @@
             @include mq ($laptop){
                 display: inline;
             }
-
-
-
         }
-
     }
 
     .no-trailer {
